--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-streamlit>=1.32.0
-pymupdf>=1.23.0
-openai>=1.12.0
-toml>=0.10.2
+streamlit
+openai
+toml
 python-dotenv
 requests
+json
+PyMuPDF
+aiohttp
+pandas
+srt
 huggingface_hub
+OpenAI
