--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
 METIS_API_KEY = tpsg-vC3QLtE2uzdm5pvjjexLfiOMKKrHekU
+METIS_BASE_URL =
+
+OPENAI_API_KEY = 
+OPENAI_BASE_URL = 
+
+GROK_API_KEY = 
+GROK_BASE_URL = 
+
+HF_API_KEY = 
+HF_BASE_URL = 
+
+OPENROUTER_API_KEY = 
+OPENROUTER_BASE_URL = 
