--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-METIS_API_KEY = tpsg-vC3QLtE2uzdm5pvjjexLfiOMKKrHekU
-METIS_BASE_URL =
+METIS_API_KEY=tpsg-vC3QLtE2uzdm5pvjjexLfiOMKKrHekU
+METIS_BASE_URL=https://api.metisai.ir/api/v1/wrapper/openai_chat_completion/chat/completions
 
 OPENAI_API_KEY = 
 OPENAI_BASE_URL = 
